--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -1,6 +1,8 @@
 body
 {
-	background: #F0F2F5;
+	background: #95A5A6;
+	font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .test
@@ -36,4 +38,58 @@ body
 	font-family: 'Potta One', cursive;
 	font-size: 24px;
 	font-weight: bolder;
+}
+
+.english1
+{
+	font-family: 'Pacifico', cursive;
+	color: #4682B4;
+	font-weight: bolder;
+}
+
+form label 
+{
+	display: block;
+	margin-top: 8px;
+}
+
+.cat-list
+{
+	border: 3px solid #000;
+	padding: 0;
+	background: #f4f3ee;
+}
+
+h1 
+{
+	padding: 10px;
+	font-size: 21px;
+	background: #2C3E50;
+	margin: 0;
+	color: #fff;
+}
+
+
+.inner-list
+{
+	padding: 15px;
+}
+
+a.new 
+{
+	display: block;
+	padding: 8px 0;
+	text-align: center;
+	width: 160px;
+	margin: 10px;
+	color: #fff;
+	background: #1ABC9C;
+	border: 1px solid #ccc;
+	text-decoration: none;
+}
+
+
+.inner-new
+{
+	padding: 35px;
 }
